salesforce/force-app/main/default/objects/LoyaltyMember__c/LoyaltyMember__c.object-meta.xml
<CustomObject>
    <description>Loyalty Member record for tracking customer points and tier status</description>
    <label>Loyalty Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>