salesforce/force-app/main/default/objects/LoyaltyMember__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>Account ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>LoyaltyMembers</relationshipName>
    <type>Lookup</type>
</CustomField>