salesforce/force-app/main/default/objects/LoyaltyMember__c/fields/Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled</label>
    <type>Checkbox</type>
</CustomField>