salesforce/force-app/main/default/objects/LoyaltyMember__c/fields/PointsBalance__c.field-meta.xml
<CustomField>
    <fullName>PointsBalance__c</fullName>
    <label>Points Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>