salesforce/force-app/main/default/objects/LoyaltyMember__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <label>Program</label>
    <referenceTo>LoyaltyProgram__c</referenceTo>
    <relationshipName>Members</relationshipName>
    <relationshipLabel>Members</relationshipLabel>
    <type>Lookup</type>
</CustomField>