salesforce/force-app/main/default/objects/LoyaltyMember__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <referenceTo>LoyaltyTier__c</referenceTo>
    <relationshipName>Members</relationshipName>
    <relationshipLabel>Members</relationshipLabel>
    <type>Lookup</type>
</CustomField>